# bitrix24-automation

./: .env.example  .gitattributes  .gitignore  Dockerfile  FIXED.txt  FIXED_ENCODING.txt  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  README_GITHUB.md  SETUP_READY.txt  START_HERE.txt  bit_new_ton_asr.py  bit_newton_asr.py  bitnewton_sync_to_api.py  bitrix24_api.py  check_python.bat  check_python.ps1  check_python.sh  check_python_run.bat  client_requests_analysis.py  config.py  crm_contacts.py  crm_deals.py  crm_leads.py  crm_report.py  custom_period_report.py  detailed_calls_analysis.py  detailed_managers_report.py  docker-compose.yml  download_ffmpeg.py  download_resolver.py  dump_one_call.py  install.bat  install_ffmpeg.bat  kpi_config.example.json  kpi_config.sales.json  kpi_config.sales_soft.json  kpi_config.sales_strict.json  kpi_dashboard.py  (+35 more)
asr/: __init__.py  bitnewton.py
bitrix/: __init__.py  api.py  recordings.py  transcriptions.py
docs/: REFACTORING_PLAN.md  TROUBLESHOOTING.txt
pipelines/: __init__.py  audio.py  bitnewton_sync.py  calls.py  cleanup.py  cli.py  config_loader.py  conversation_intelligence.py  deals.py  dump_one_call_debug.py  evaluation.py  factories.py  finalization.py  kpi.py  lost_deals.py  models.py  paths.py  processing.py  reevaluation.py  reporting.py  retry.py  retry_queue.py  runtime.py  scoring.py  script_profiles.py  script_scoring.py  stage_history.py  stages.py  token_status.py  transcription.py
scoring/: codex_evaluator.py
tests/: test_cleanup.py  test_conversation_intelligence.py  test_finalization.py  (+12 more)
(+33 files in other folders)
