[project]
name = "bitrix24-automation"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  "reports",
  "venv",
  ".venv",
  "__pycache__",
  "system--diarize",
  "asr",
  "ui",
  "docs",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Автономные скрипты-отчеты: длинные русские строки заголовков и выводов,
# перенос которых ухудшает читаемость текста отчета.
"client_requests_analysis.py" = ["E501"]
"kso_deals_analysis.py" = ["E501"]
"so_deals_analysis.py" = ["E501"]
"top_large_invoices_analysis.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = '''
/(
    reports
  | venv
  | \.venv
  | __pycache__
  | system--diarize
  | asr
  | ui
  | docs
)/
'''
